# notifelect

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  docker-compose.yml  ports-and-adapters.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
notifelect/: __init__.py  __main__.py  cli.py  election.py  election_manager.py  logconfig.py  models.py  ports.py  queries.py  task_manager.py
notifelect/adapters/: inmemory.py  postgresql.py
notifelect/core/: election.py  messages.py  task_manager.py
src/notifelect/: _version.py  cli.py  election.py  task_manager.py
src/notifelect/adapters/: inmemory.py  postgresql.py  redis.py
src/notifelect/core/: election.py  settings.py
test/: conftest.py  test_election.py  test_eletion.py  test_inmemory_election.py  test_postgresql_election.py  test_redis_election.py  test_tm.py
test/db/: Dockerfile  init_db.sh
tools/: ex.py
