[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "setuptools_scm"]

[project]
authors = [{ name = "janbjorge"}]
description = "A distributed leader election python package with pluggable backends."
dynamic = ["version"]
license = { text = "MIT License" }
name = "notifelect"
readme = "README.md"
requires-python = ">=3.10"

classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Topic :: System :: Distributed Computing"
]

dependencies = [
    "pydantic>=2.0.0",
]

[project.urls]
Documentation = "https://github.com/janbjorge/notifelect/wiki"
Homepage = "https://github.com/janbjorge/notifelect/"
Issues = "https://github.com/janbjorge/notifelect/issues"
Repository = "https://github.com/janbjorge/notifelect/"

[project.optional-dependencies]
asyncpg = [
    "asyncpg>=0.27.0",
]
redis = [
    "redis>=7.0.0",
]
dev = [
    "asyncpg>=0.27.0",
    "asyncpg-stubs",
    "mypy-extensions",
    "mypy",
    "pytest-asyncio",
    "pytest",
    "redis>=7.0.0",
    "ruff",
    "testcontainers[postgres,redis]",
]
docs = [
    "myst-parser",
    "sphinx",
    "sphinx-rtd-theme",
]

[tool.setuptools_scm]
write_to = "notifelect/_version.py"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
    "C",
    "E",
    "F",
    "I",
    "PIE",
    "Q",
    "RET",
    "RSE",
    "SIM",
    "W",
    "C90",
]
[tool.ruff.lint.isort]
combine-as-imports = true

[tool.mypy]
disallow_untyped_defs = true
exclude = "^(build)"
extra_checks = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]
python_version = "3.10"
strict_equality = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_mode = "auto"


